k8s/media/jellyfin/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  type: ClusterIP
  selector:
    component: jellyfin
  ports:
    - name: web-ui
      port: 8096
      targetPort: 8096
